Login Devmedia completo

--- a/AutenticacaoAspNetMvc/Web.config
+++ b/AutenticacaoAspNetMvc/Web.config
@@ -61,10 +61,8 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
+<connectionStrings>
 <add name="Usuarios"
-    connectionString="Data Source=LAB01\SQLEXPRESS;Initial
-    Catalog=DbUsuarios;Integrated Security=True;"
-    providerName="System.Data.SqlClient"/>
+    connectionString="Data Source=RODRIGO\SQLEXPRESS;Initial Catalog=DbUsuarios;Integrated Security=True;" providerName="System.Data.SqlClient"/>
 </connectionStrings>
 </configuration>
